Take advantage of the new collections API methods